--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.ExamJavaAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".task12.task12Activity2"
+            android:exported="false" />
+        <activity
+            android:name=".task12.task12Activity"
+            android:exported="false" />
+        <activity
             android:name=".task11.task11_activity"
             android:exported="false" />
         <activity
