--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.ExamJavaAndroid"
         tools:targetApi="31">
         <activity
+            android:name=".task15.task15Activity"
+            android:exported="false" />
+        <activity
+            android:name=".task14.task14Activity"
+            android:exported="false" />
+        <activity
             android:name=".task13.task13"
             android:exported="false" />
         <activity
