--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,8 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -22,7 +24,9 @@
             android:name=".task18.SomeService"
             android:enabled="true"
             android:exported="true" />
-
+        <activity
+            android:name=".task17.task17"
+            android:exported="false" />
         <activity
             android:name=".task18.Task18"
             android:exported="false" />
